# win32-rs

./: COMMAND.md  Cargo.toml  RECORD.md  build-p.bat
crates/activity_ptr_scan/: Cargo.toml
crates/activity_ptr_scan/src/: lib.rs  scan.rs
crates/plants_vs_zombies/: Cargo.toml  RECORD.md
crates/plants_vs_zombies/src/: constant.rs  inject.rs  lib.rs  main.rs  start.rs  utils.rs
crates/win32_utils/src/: lib.rs  module.rs  pointer.rs  process.rs  string.rs  ui.rs
crates/win32_utils/src/window/: hwnd.rs
src/: lib.rs  main.rs
src/app/: index.rs
src/utils/: hwnd.rs  ui.rs
src/windows/: hwnd.rs  mod.rs  module.rs  ui.rs
src/zombie/: start.rs
