[package]
name = "scan"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
[target.'cfg(target_os = "windows")'.dependencies]
anyhow = "1.0.87"
windows = { version = "0.58.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
] }

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
