[package]
name = "plants_vs_zombies"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name="game_dll"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "game_inject_dll"
path = "src/main.rs"

[dependencies]
win32_utils.workspace = true
anyhow.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
] }